--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,26 @@
   bottom: 20px;
   left: 200px;
 }
+
+.inputGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.addAttributeBtn {
+  cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
+}
+
+.btnGroup {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+}
+
+.attributeContent {
+  width: 100%;
+}
