--- a/src/components/AttributeItem/AttributeItem.module.css
+++ b/src/components/AttributeItem/AttributeItem.module.css
@@ -1,8 +1,24 @@
 .item {
     width: 100%;
     display: flex;
+    flex-direction: column;
     border: 1px solid grey;
     padding: 10px 20px;
     border-radius: 8px;
     gap: 8px;
+}
+
+.topRow {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.topRow span {
+    cursor: pointer;
+}
+
+.select {
+    font-size:  14px;
+    font-weight:  400px;
 }
