--- a/src/components/AttributeList/AttributeList.module.css
+++ b/src/components/AttributeList/AttributeList.module.css
@@ -1,13 +1,6 @@
 .list {
-    position: absolute;
-    top: 100px;
-    left: 200px;
     display: flex;
     flex-direction: column;
     gap: 8px;
-    width: 500px;
-    height: 500px;
-    overflow: hidden;
-    overflow-y: auto;
-    padding: 0 10px;
+    margin-top: 20px;
 }
